<resources>
    <string name="app_name">Inventory</string>
    <string name="action_settings">Settings</string>
    <string name="delete_all">Delete All Products</string>
    <string name="dummyData">Insert Sample Products</string>
    <string name="title_activity_edit">EditActivity</string>
    <string name="add_item">Add New Product</string>

    <string name="pName">Product Name: </string>
    <string name="price">Price: </string>
    <string name="category">Category: </string>
    <string name="quantity">Quantity: </string>

    <string name="supName">Supplier Name: </string>
    <string name="supNameHint">Jane Doe</string>
    <string name="supPhone">Supplier\'s Phone #: </string>
    <string name="supPhoneHint">+1-311-555-0199</string>
    <string name="supEmail">Supplier\'s Email Address: </string>
    <string name="supEmailHint">Janedoe@example.com</string>
    <string name="imageButton">Select Image From Gallery</string>
    <string name="storeName">Otaku Shop Inventory</string>

    <!--Text for quantity-->
    <string name="lessThan100">Quantity &lt; 100</string>
    <string name="lessThan200">Quantity &lt; 200</string>
    <string name="lessThan300">Quantity &lt; 300</string>
    <string name="lessThan400">Quantity &lt; 400</string>
    <string name="greaterThan400">Quantity &gt;= 400</string>

    <string name="save_edit">Save</string>
    <string name="delete_edit">Delete</string>

    <string name="titleText">Uh Oh...It\'s a bit empty here</string>
    <string name="subText">Start filling up your store &lt;3</string>

    <!--Mock Item 1-->
    <string name="item1Name">Nozomi Tojo Pentel Eye Plus Collab Ver Love Live! Figure</string>
    <string name="item1Price">202.99</string>
    <string name="item1Category">Figures</string>
    <string name="item1Quantity">320</string>
    <string name="item1SupplierName">John Smith</string>
    <string name="item1SupplierPhone">2403331111</string>
    <string name="item1SupplierEmail">Johnsmith@example.com</string>

    <!--Mock Item 2-->
    <string name="item2Name">The Heroic Legend Of Arslan Manga Volume 8</string>
    <string name="item2Price">8.24</string>
    <string name="item2Category">Manga</string>
    <string name="item2Quantity">58</string>
    <string name="item2SupplierName">Michael Johnson</string>
    <string name="item2SupplierPhone">6184449821</string>
    <string name="item2SupplierEmail">Michaeljohnson@example.com</string>

    <!--Mock Item 3-->
    <string name="item3Name">Sailor Guardians Group Sailor Moon R Tumbler</string>
    <string name="item3Price">9.59</string>
    <string name="item3Category">Utensils</string>
    <string name="item3Quantity">200</string>
    <string name="item3SupplierName">Jane Jarvis</string>
    <string name="item3SupplierPhone">6184238921</string>
    <string name="item3SupplierEmail">Janejarvis@example.com</string>

    <!--Mock Item 4-->
    <string name="item4Name">Saitama One-Punch Man Clip Plush</string>
    <string name="item4Price">16.49</string>
    <string name="item4Category">Plush Toy</string>
    <string name="item4Quantity">600</string>
    <string name="item4SupplierName">Deonte Monroe</string>
    <string name="item4SupplierPhone">8563332222</string>
    <string name="item4SupplierEmail">Deontemonroe@example.com</string>

    <!--Mock Item 5-->
    <string name="item5Name">Eternal Sailor Moon Plush</string>
    <string name="item5Price">23.99</string>
    <string name="item5Category">Plush Toy</string>
    <string name="item5Quantity">80</string>
    <string name="item5SupplierName">V\'Sheta Cropper</string>
    <string name="item5SupplierPhone">2403339865</string>
    <string name="item5SupplierEmail">Vshetacropper@example.com</string>

    <!--Mock Item 6-->
    <string name="item6Name">Winter Yuri!!! On Ice Fabric Poster</string>
    <string name="item6Price">19.99</string>
    <string name="item6Category">Poster</string>
    <string name="item6Quantity">350</string>
    <string name="item6SupplierName">Brittany Scott</string>
    <string name="item6SupplierPhone">6186254578</string>
    <string name="item6SupplierEmail">Brittanyscott@example.com</string>

    <!--Mock Item 7-->
    <string name="item7Name">Skating Trio Yuri!!! On ICE Metal Keychain</string>
    <string name="item7Price">8.99</string>
    <string name="item7Category">Keychain</string>
    <string name="item7Quantity">500</string>
    <string name="item7SupplierName">Mathew Wilson</string>
    <string name="item7SupplierPhone">3652146325</string>
    <string name="item7SupplierEmail">Mathewwilson@example.com</string>

    <!--Mock Item 8-->
    <string name="item8Name">Eevee Evolution Pokemon Infinity Scarf</string>
    <string name="item8Price">14.99</string>
    <string name="item8Category">Clothing</string>
    <string name="item8Quantity">101</string>
    <string name="item8SupplierName">Steven Dilorenzo</string>
    <string name="item8SupplierPhone">4526254789</string>
    <string name="item8SupplierEmail">Stevendilorenxo@example.com</string>

</resources>
